Fix blue text colouring on mobile

--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -1292,6 +1292,7 @@ ul.filter {
     padding: 0;
     margin: 0;
     margin-bottom: 20px;
+    color: black;
 
     cursor: pointer;
 
